--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sarin/About</title>
+    <title>Sarin/Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -15,24 +15,26 @@
 
       rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style02.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link type="text/css" rel="stylesheet" href="webpage/webpage02/css/style02.css">
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="../../index.html">HOME</a> <a href="#" class="active">ABOUT</a>
-        <a href="../webpage03/index03.html">SKILL</a> <a href="../webpage04/index04.html">EXPERIENCE</a>
-        <a href="../webpage05/index05.html">CONTACT</a> </nav>
-    </header>
-    <section class="about">
-      <div class="about-image"> <img src="image/img03.JPG" height="350px"
+      <nav class="navbar"> <a href="#" class="active">HOME</a> <a
 
-          width="450px"> </div>
-      <div class="about-content" style="margin-left: 30px;">
-        <p> Hi my name is Sarin Lekvilai, or you can call me Pun. I am the
-          youngest brother of myfamily, I have two sibling and me as little
-          brother. </p>
+          href="webpage/webpage02/index02.html">ABOUT</a> <a href="webpage/webpage03/index03.html">SKILL</a>
+        <a href="webpage/webpage04/index04.html">EXPERIENCE</a> <a href="webpage/webpage05/index05.html">CONTACT</a>
+      </nav>
+    </header>
+    <section class="home">
+      <div class="home-image"> <img src="image/img01.jpg" height="500px" width="400px">
+      </div>
+      <div class="home-content" style="margin-left: 30px;">
+        <h1> Hi i'm Sarin Lekvilai </h1>
+        <h3> Host of TV show</h3>
         <p> I would like to be the speaker and the host of show since i were
-          doing some activity in the universuty. </p>
+          doing some activity in the universuty.</p>
+        <h3>640510215</h3>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
