--- a/webpage/webpage04/index04.html
+++ b/webpage/webpage04/index04.html
@@ -4,31 +4,37 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sarin/Experience</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+
       crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&amp;display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&amp;display=swap"
+
       rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style04.css">
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="#">HOME</a> <a href="#">ABOUT</a> <a href="#">SKILL</a>
-        <a href="#" class="active">EXPERIENCE</a> <a href="#">CONTACT</a> </nav>
+      <nav class="navbar"> <a href="../../index.html">HOME</a> <a href="../webpage02/index02.html">ABOUT</a>
+        <a href="../webpage03/index03.html">SKILL</a> <a href="#" class="active">EXPERIENCE</a>
+        <a href="../webpage05/index05.html">CONTACT</a> </nav>
     </header>
     <section class="Experience">
-      <div class="Experience-image"> <img src="image/img07.PNG" alt=""> <img src="image/img08.JPG"
-          alt=""> </div>
-      <div class="Experience-content">
+      <div class="Experience-image"> <img src="image/img07.PNG" height="500px" width="400px"  style="margin-top: 40px;">
+        <img src="image/img08.JPG"height="500px" width="400px"  style="margin-top: 40px;"> </div>
+      <div class="Experience-content"  style="margin-left: 100px;">
         <p> I have been doing part-time job in the resturant, and I have been
           acting in the university theater. </p>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+
 crossorigin="anonymous"></script>
   </body>
   <!--end body-->
