--- a/index04.html
+++ b/index04.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home/Sarin/TVhost/resume</title>
+    <title>Experience/Sarin/TVhost/resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -19,24 +19,35 @@
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="#" class="active">HOME</a> <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
+      <nav class="navbar"> <a href="file:///C:/Users/naise/Desktop/215resume/index01.html">HOME</a>
+        <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
         <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
-        <a href="file:///C:/Users/naise/Desktop/215resume/index04.html">EXPERIENCE</a>
-      </nav>
+        <a href="#" class="active">EXPERIENCE</a> </nav>
     </header>
     <section class="home">
-      <div class="home-image"> <img src="image/profile01.jpg" alt=""> </div>
       <div class="home-content">
-        <h1> Hi i'm Sarin Lekvilai </h1>
-        <h3> Host of TV show </h3>
-        <p> I would like to be the speaker and the host of show since i were
-          doing some activity in the universuty. </p>
-        <div class="home-sci"> <a href="#"><i class="bx bxl-instagram"></i></a>
-          <a href="#"><i class="bx bxl-facebook"></i></a> <a href="#"><i class="bx bxl-gmail"></i></a>
-          <a href="#"><i class="bx bxs-phone"></i></a> </div>
-        <div class="modal-dialog modal-dialog-centered">button</div>
+        <h3> I have an experience of show hosting </h3>
+        <p> I have been the host of show taht i made for work and i really love it and always think about it all time since that.</p>
       </div>
-    </section>
+      <iframe src="https://www.youtube.com/watch?v=bxqKj5Q_oQ0&amp;t=225s" height="315"
+
+        width="420"> </iframe> </section>
+  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        FUN FACT
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        In this VDO we shootying about review the food in the mid night aroun the university 
+      </div>
+    </div>
+  </div>
+
+
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
