--- a/index02.html
+++ b/index02.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home/Sarin/TVhost/resume</title>
+    <title>About/Sarin/TVhost/resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -19,23 +19,20 @@
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="#" class="active">HOME</a> <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
-        <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
+      <nav class="navbar"> <a href="file:///C:/Users/naise/Desktop/215resume/index01.html">HOME</a>
+        <a href="#" class="active">ABOUT</a> <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
         <a href="file:///C:/Users/naise/Desktop/215resume/index04.html">EXPERIENCE</a>
       </nav>
     </header>
     <section class="home">
-      <div class="home-image"> <img src="image/profile01.jpg" alt=""> </div>
       <div class="home-content">
-        <h1> Hi i'm Sarin Lekvilai </h1>
-        <h3> Host of TV show </h3>
-        <p> I would like to be the speaker and the host of show since i were
-          doing some activity in the universuty. </p>
-        <div class="home-sci"> <a href="#"><i class="bx bxl-instagram"></i></a>
-          <a href="#"><i class="bx bxl-facebook"></i></a> <a href="#"><i class="bx bxl-gmail"></i></a>
-          <a href="#"><i class="bx bxs-phone"></i></a> </div>
-        <div class="modal-dialog modal-dialog-centered">button</div>
+        <h3> Hi my name is Sarin Lekvilai</h3>
+        <p> Now i am the student at Silpakorn University In the Libary sciene. I
+          would like to be the host of TV show since i were young , I have an
+          Idol names George he is the youtuber his chanel name Rubsarb
+          production.</p>
       </div>
+      <div class="home-image"> <img src="image/profile02.jpg" alt=""> </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 
