--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sarin/Home</title>
+    <title>Home/Sarin/TVhost/resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -16,25 +16,25 @@
       rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link type="text/css" rel="stylesheet" href="webpage/webpage02/css/style02.css">
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="#" class="active">HOME</a> <a
-
-          href="webpage/webpage02/index02.html">ABOUT</a> <a href="webpage/webpage03/index03.html">SKILL</a>
-        <a href="webpage/webpage04/index04.html">EXPERIENCE</a> <a href="webpage/webpage05/index05.html">CONTACT</a>
+      <nav class="navbar"> <a href="#" class="active">HOME</a> <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
+        <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
+        <a href="file:///C:/Users/naise/Desktop/215resume/index04.html">EXPERIENCE</a>
       </nav>
     </header>
     <section class="home">
-      <div class="home-image"> <img src="image/img01.jpg" height="500px" width="400px">
-      </div>
-      <div class="home-content" style="margin-left: 30px;">
+      <div class="home-image"> <img src="image/profile01.jpg" alt=""> </div>
+      <div class="home-content">
         <h1> Hi i'm Sarin Lekvilai </h1>
-        <h3> Host of TV show</h3>
+        <h3> Host of TV show </h3>
         <p> I would like to be the speaker and the host of show since i were
-          doing some activity in the universuty.</p>
-        <h3>640510215</h3>
+          doing some activity in the universuty. </p>
+        <div class="home-sci"> <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-facebook"></i></a> <a href="#"><i class="bx bxl-gmail"></i></a>
+          <a href="#"><i class="bx bxs-phone"></i></a> </div>
+        
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
