--- a/index03.html
+++ b/index03.html
@@ -19,9 +19,9 @@
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="file:///C:/Users/naise/Desktop/215resume/index01.html">HOME</a>
+      <nav class="navbar"> <a href="file:///C:/Users/naise/Desktop/215resume/index.html">HOME</a>
         <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
-        <a href="#" class="active">SKILL</a> <a href="file:///C:/Users/naise/Desktop/215resume/index04.html">EXPERIENCE</a>
+        <a href="#" class="active">SKILL</a> <a href="index04.html">EXPERIENCE</a>
       </nav>
     </header>
     <section class="home">
@@ -32,15 +32,15 @@
       </div>
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
-          <div class="carousel-item active"> <img src="image/protrait01.jpg" class="d-block w-100"
+          <div class="carousel-item active"> <img class="d-block w-100" src="image/img02.jpg" class="d-block w-100"
 
-              alt="..."> </div>
-          <div class="carousel-item"> <img src="protrair02.jpg" class="d-block w-100"
+              alt="First slide"> </div>
+          <div class="carousel-item"> <img src="image/img03.jpg" class="d-block w-100"
 
-              alt="..."> </div>
-          <div class="carousel-item"> <img src="image/img02.jpg" class="d-block w-100"
+              alt="Second slide"> </div>
+          <div class="carousel-item"> <img class="d-block w-100" class="d-block w-100" src="image/protrait01.jpg" class="d-block w-100"
 
-              alt="..."> </div>
+              alt="Third slide"> </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
 
@@ -50,13 +50,15 @@
           type="button" data-bs-target="#carouselExample" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span> <span
 
-            class="visually-hidden">Next</span> </button> </div>
+            class="visually-hidden">Next</span> </button>
+      </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 
 crossorigin="anonymous"></script>
+    
   </body>
   <!--end body-->
 </html>
