--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home/Sarin/TVhost/resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&amp;display=swap"
       rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="#" class="active">HOME</a> <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
-        <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
+      <nav class="navbar"> <a href="#" class="active">HOME</a> <a href="file:///C:/Users/naise/Desktop/215resume/index02.html"
+          title="02">ABOUT</a> <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
         <a href="file:///C:/Users/naise/Desktop/215resume/index04.html">EXPERIENCE</a>
       </nav>
     </header>
@@ -31,16 +28,16 @@
         <h3> Host of TV show </h3>
         <p> I would like to be the speaker and the host of show since i were
           doing some activity in the universuty. </p>
-        <div class="home-sci"> <a href="#"><i class="bx bxl-instagram"></i></a>
-          <a href="#"><i class="bx bxl-facebook"></i></a> <a href="#"><i class="bx bxl-gmail"></i></a>
-          <a href="#"><i class="bx bxs-phone"></i></a> </div>
-        
+        <div class="home-sci"> <a href="https://www.instagram.com/pounomaiaek/?next=%2F"
+            title="ig" target="_blank"><i class="bx bxl-instagram"></i></a> <a
+            href="https://web.facebook.com/sarin.lekvilai?locale=th_TH" target="_blank"><i
+              class="bx bxl-facebook"></i></a> <a href="file:///C:/Users/naise/Desktop/215resume/index05.html"
+            target="_blank" title="gmail"><i class="bx bxl-gmail"></i></a> <a href="file:///C:/Users/naise/Desktop/215resume/index05.html"
+            title="Tel" target="_blank"><i class="bx bxs-phone"></i></a> </div>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
   </body>
   <!--end body-->
