--- a/index04.html
+++ b/index04.html
@@ -19,35 +19,35 @@
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="file:///C:/Users/naise/Desktop/215resume/index01.html">HOME</a>
-        <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
+      <nav class="navbar"> <a href="index.html">HOME</a> <a href="file:///C:/Users/naise/Desktop/215resume/index02.html">ABOUT</a>
         <a href="file:///C:/Users/naise/Desktop/215resume/index03.html">SKILL</a>
         <a href="#" class="active">EXPERIENCE</a> </nav>
     </header>
     <section class="home">
       <div class="home-content">
         <h3> I have an experience of show hosting </h3>
-        <p> I have been the host of show taht i made for work and i really love it and always think about it all time since that.</p>
-      </div>
-      <iframe src="https://www.youtube.com/watch?v=bxqKj5Q_oQ0&amp;t=225s" height="315"
+        <p> I have been the host of show taht i made for work and i really love
+          it and always think about it all time since that.</p>
+        <p>
+          <a href="https://youtu.be/bxqKj5Q_oQ0?si=Lkvy25bL6GzN9bsj">Video link</a>
+        </p>
+        
+      </div><div class="ratio ratio-4x3">
+  <iframe src="https://youtu.be/bxqKj5Q_oQ0?si=Lkvy25bL6GzN9bsj" title="YouTube video" padding-left: 5px></iframe>
+</div> </section>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header"> <button class="accordion-button" type="button"
 
-        width="420"> </iframe> </section>
-  <div class="accordion" id="accordionExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        FUN FACT
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        In this VDO we shootying about review the food in the mid night aroun the university 
+            data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
+
+            aria-controls="collapseOne"> FUN FACT </button> </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body"> In this VDO we shooting about review the
+            food in the mid night around the Silapkorn university </div>
+        </div>
       </div>
     </div>
-  </div>
-
-
-</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
