--- a/2-5/index02.html
+++ b/2-5/index02.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home/Sarin/TVhost/resume</title>
+    <title>About/Sarin/TVhost/resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
@@ -12,29 +12,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&amp;display=swap"
       rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style02.css">
   </head>
   <!--end heading--> <body>
     <header class="header"> <a href="#" class="logo">Sarin</a>
-      <nav class="navbar"> <a href="#" class="active">HOME</a> <a href="file:///D:/pun/New%20folder/2-5/index02.html"
-          title="about" target="_top">ABOUT</a> <a href="file:///D:/pun/New%20folder/2-5/index03.html"
+      <nav class="navbar"> <a href="file:///D:/pun/New%20folder/index.html" title="home"
+          target="_top">HOME</a> <a href="#" class="active">ABOUT</a> <a href="file:///D:/pun/New%20folder/2-5/index03.html"
           title="skill" target="_top">SKILL</a> <a href="file:///D:/pun/New%20folder/2-5/index04.html"
           title="experience" target="_top">EXPERIENCE</a> </nav>
     </header>
     <section class="home">
-      <div class="home-image"> <img src="image/profile01.jpg" alt=""> </div>
       <div class="home-content">
-        <h1> Hi i'm Sarin Lekvilai </h1>
-        <h3> Host of TV show </h3>
-        <p> I would like to be the speaker and the host of show since i were
-          doing some activity in the universuty. </p>
-        <div class="home-sci"> <a href="https://www.instagram.com/pounomaiaek/"
-            title="ig" target="_blank"><i class="bx bxl-instagram"></i></a> <a
-            href="https://web.facebook.com/sarin.lekvilai" target="_blank" title="fb"><i
-              class="bx bxl-facebook"></i></a> <a href="file:///D:/pun/New%20folder/2-5/index05.html"
-            target="_blank" title="gmail"><i class="bx bxl-gmail"></i></a> <a href="file:///D:/pun/New%20folder/2-5/index05.html"
-            title="Tel" target="_blank"><i class="bx bxs-phone"></i></a> </div>
+        <h3> Hi my name is Sarin Lekvilai</h3>
+        <p> Now i am the student at Silpakorn University In the Libary sciene. I
+          would like to be the host of TV show since i were young , I have an
+          Idol names George he is the youtuber his chanel name Rubsarb
+          production.</p>
       </div>
+      <div class="home-image"> <img src="image/profile02.jpg" alt=""> </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
